--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -202,6 +202,9 @@
 				bottom: 0;
 				left: 0;
 				transform: translate(-30%, 70%);
+				@media (max-width:$mobile){
+					filter: blur(50px);
+				}
 			}
 		}
 		opacity: 0;
